<package format="3">
  <name>ros_ign_gazebo_demos</name>
  <version>0.244.3</version>
  <description>Demos using Gazebo Sim simulation with ROS.</description>
  <license>Apache 2.0</license>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Fortress (default) -->
  <exec_depend condition="$GZ_VERSION == fortress">ignition-gazebo6</exec_depend>
  <exec_depend condition="$GZ_VERSION == ''">ignition-gazebo6</exec_depend>
  <!-- Edifice -->
  <exec_depend condition="$GZ_VERSION == edifice">ignition-gazebo5</exec_depend>

  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_image</exec_depend>
  <!-- See https://github.com/gazebosim/ros_gz/issues/40 -->
  <!--exec_depend>ros_ign_point_cloud</exec_depend-->
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
