<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <!-- TODO: Make this a metapackage, see
       https://github.com/ros2/ros2/issues/408 -->
  <name>ros_ign</name>
  <version>0.221.2</version>
  <description>Meta-package containing interfaces for using ROS 2 with <a href="https://ignitionrobotics.org">Ignition</a> simulation.</description>
  <author email="louise@openrobotics.org">Louise Poubel</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_gazebo_demos</exec_depend>
  <exec_depend>ros_ign_image</exec_depend>
  <!-- See https://github.com/osrf/ros_ign/issues/40 -->
  <!--exec_depend>ros_ign_point_cloud</exec_depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
